--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <nav class="red lighten-2" role="navigation">
-        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">10,000 Feet</a>
+    <nav class="blue darken-3" role="navigation">
+        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><img src="/img/logo.png" width="50px"/>10,000 feet</a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#">Login</a></li>
             </ul>
@@ -26,22 +26,30 @@
         </div>
     </nav>
 
-    <div class="section no-pad-bot" id="index-banner">
+    <div class="section no-pad-bot" id="graph">
         <div class="container">
-            <div class="row center" id="mainSet">
-
+            <div class="row center">
+                <div class="card grey lighten-5">
+                    <div class="card-content" id="mainSet">
+                        <span class="card-title">Today's Activity - 12/10/16</span>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">Details</a>
+                            <a href="#">Share</a>
+                        </div>
+                    </div>
+                    <div id="tooltip" class="hidden">
+                        <p><strong>Project: </strong><span id="value">100</span></p>
+                        <p><strong>Duration: </strong><span id="duration">100</span> mins</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div id="tooltip" class="hidden">
-        <p><strong>Project: </strong><span id="value">100</span></p>
-        <p><strong>Duration: </strong><span id="duration">100</span> mins</p>
-    </div>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="/js/d3-wakatime.js"></script>
-</body>
-</html>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="/js/d3-wakatime.js"></script>
+    </body>
+    </html>
