--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,6 @@
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="/js/bundle.js"></script>
-    <script src="/js/d3-wakatime.js"></script>
+    <!-- <script src="/js/d3-wakatime.js"></script> -->
 </body>
 </html>
